# RAG

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
scripts/: run_bm25_test.py  run_hybrid_search.py  run_hybrid_test.py  run_keyword_search.py  run_rag_test.py  run_vector_search.py
src/: __init__.py
src/core/: azure_openai.py  config.py  embedding_manager.py  hnsw_storage.py  json_storage.py  prompts.py  rag_pipeline_hnsw.py  rag_pipeline_knn.py  vector_search_pipeline_hnsw.py  vector_search_pipeline_knn.py
src/preprocessing/: __init__.py  build_embeddings.py  chunker.py
src/retrieval/: bm25.py  hybrid.py  reranker.py
src/retrieval/rerankers/: bge_reranker.py  colbert_reranker.py  compare_rerankers.py  cross_encoder_reranker.py  llm_reranker.py  reranker_comparison_20260302_183311.json  reranker_comparison_20260302_183545.json
src/utils/: debug_json.py  inspect_results.py
