[build-system]
requires = ["setuptools>=67.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "document-rag"
version = "0.1.0"
description = "Document Retrieval-Augmented Generation (RAG) pipeline"
authors = [
    { name = "Independer RAG Team" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0.0",
    "numpy>=1.24.0",
    "sentence-transformers>=2.2.0",
    "python-dotenv>=1.0.0",
    "PyMuPDF>=1.26.0",
    "hnswlib>=0.8.0",
    "FlagEmbedding>=1.2.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
